# maze-game

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: main.rs
src/components/: game_panel.rs  mod.rs
src/logic/: board.rs  tile.rs
